<resources>
    <string name="app_name">Jeu_Calcul_Mental</string>
    <string name="jeu">Jeu</string>
    <string name="meilleurs_scores">Meilleurs Scores</string>
    <string name="effacer">Effacer</string>
    <string name="score">Score</string>
    <string name="nom">Nom</string>
    <string name="les_10_meilleurs_joueurs">Les 10 meilleurs joueurs</string>
    <string name="scoreJeu">Ton score :</string>
    <string name="erreurs_possible_jeu">Erreurs possible :</string>
    <string name="ErreurTropGrande">"Valeur trop grande"</string>
    <string name="ErreurMoins">"Ajout moins impossible"</string>
    <string name="ErreurValeurVide">"Entrée une valeur"</string>
    <string name="calcul">Calcul :</string>
    <string name="reponse">Réponse :</string>
    <string name="TextAnnonceEnregistrement">Tu a perdu. Il ne te reste plus qu\'a enregistrer ton score sous un pseudo</string>
    <string name="TextPseudo">Pseudo :</string>
    <string name="ecrivez_votre_pseudo_ici">Ecrivez votre pseudo ici</string>
    <string name="valider">Valider</string>
    <string name="ResultatIncorrect">Résultat Incorrect ! Réessayez</string>
    <string name="retour_a_l_accueil">Retour a l\'accueil</string>
    <string name="classement">Classement</string>
    <string name="NonEnregistrerScore0">Votre score est de zéro, il n\'est pas enregistrer pour votre ego \n Réeesayez !!</string>
    <string name="APropos">A Propos</string>
    <string name="ameliorer_votre_calcul_mental">Ameliorer votre calcul mental</string>
    <string name="pseudovide">Compléter votre pseudo</string>
</resources>