<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.PseudoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAnnoncePerdu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/TextAnnonceEnregistrement"
                android:textColor="#FF0000"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRappelScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="35dp"
                    android:layout_weight="1"
                    android:gravity="right|center_horizontal"
                    android:text="@string/scoreJeu"
                    android:textColor="#020000"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textViewScoreFinal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginBottom="35dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|left"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewTextPseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/TextPseudo"
                android:textColor="#000000"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayoutPseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEditPseudo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:hint="@string/ecrivez_votre_pseudo_ici"
                    android:maxLength="15" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bouttonRetourAccueil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00B7FF"
                android:text="@string/valider" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>